--- a/examples/make-md-fontsizes-larger.ipynb
+++ b/examples/make-md-fontsizes-larger.ipynb
@@ -30,7 +30,9 @@
     "```html\n",
     "<link rel=\"stylesheet\" href=\"styles.css\">\n",
     "```\n",
-    "you will have to do this for each markdown cell as far as I'm aware."
+    "you will have to do this for each markdown cell as far as I'm aware.\n",
+    "\n",
+    "This doesn't appear to work when viewed in github, but it works in vscode."
    ]
   },
   {
