--- a/examples/sequential-reveal.ipynb
+++ b/examples/sequential-reveal.ipynb
@@ -14,39 +14,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "polyglot_notebook": {
-     "kernelName": "html"
-    },
-    "tags": [
-     "mdstyle"
-    ],
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "<!-- style overrides to make fonts large enough for presentation -->\n",
-    "<style> \n",
-    "h1 {\n",
-    "  font-size: 5rem;\n",
-    "}\n",
-    "h2 {\n",
-    "  font-size: 4rem;\n",
-    "}\n",
-    "h3 {\n",
-    "  font-size: 3rem;\n",
-    "}\n",
-    "body, p, ul, ol {\n",
-    "  font-size: 2.5rem;\n",
-    "}\n",
-    "</style>"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -87,28 +54,13 @@
     {
      "data": {
       "text/markdown": [
-       "<!-- style overrides to make fonts large enough for presentation -->\n",
-       "<style> \n",
-       "h1 {\n",
-       "  font-size: 5rem;\n",
-       "}\n",
-       "h2 {\n",
-       "  font-size: 4rem;\n",
-       "}\n",
-       "h3 {\n",
-       "  font-size: 3rem;\n",
-       "}\n",
-       "body, p, ul, ol {\n",
-       "  font-size: 2.5rem;\n",
-       "}\n",
-       "</style>\r\n",
+       "<link rel=\"stylesheet\" href=\"styles.css\">\r\n",
+       "\r\n",
        "# A Title\n",
        "\r\n",
        "## A new Section\n",
        "\r\n",
        "A paragraph of text\n",
-       "\r\n",
-       "- bullet point one\n",
        "\r\n"
       ]
      },
@@ -122,7 +74,7 @@
     "\n",
     "using sequential_reveal_md_tool;\n",
     "\n",
-    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCellUsingStyleCellTag(\"cell1\", \"mdstyle\");"
+    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCellUsingStyleString(\"cell1\", \"<link rel=\\\"stylesheet\\\" href=\\\"styles.css\\\">\\n\");\n"
    ]
   }
  ],
