--- a/tests/unit-tests/testData/sequentialReveal/after2.ipynb
+++ b/tests/unit-tests/testData/sequentialReveal/after2.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sequential Reveal Tester Notebook\n",
-    "\n",
-    "The following markdoen cell will contain some content which we might want to reveal sequentially, like the animation features of Powerpoint or Google Slides.\n",
-    "\n",
-    "The C# cell below that will render the sections from themarkdown cell one by one.\n",
-    "\n",
-    "In a presentation you would minimise the markdown cell and repeatedly run the the C# cell to sequentially show the content sections."
+    "random cell"
    ]
   },
   {
@@ -18,38 +12,15 @@
    "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
-     "kernelName": "html"
+     "kernelName": "csharp"
     },
-    "tags": [
-     "mdstyle"
-    ],
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
    "source": [
-    "<style> \n",
-    "h1 {\n",
-    "  font-size: 3em;\n",
-    "}\n",
-    "h2 {\n",
-    "  font-size: 2em;\n",
-    "}\n",
-    "h3 {\n",
-    "  font-size: 1.75em;\n",
-    "}\n",
-    "body, p {\n",
-    "  font-size: 1.5em;\n",
-    "}\n",
-    "ul {\n",
-    "  font-size: 1.5em;\n",
-    "  line-height: 1.25;\n",
-    "}\n",
-    "li {\n",
-    "  margin-bottom: 0.5em;\n",
-    "}\n",
-    "</style>"
+    "// random cell"
    ]
   },
   {
