--- a/examples/sequential-reveal.ipynb
+++ b/examples/sequential-reveal.ipynb
@@ -17,6 +17,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!-- Comment to show content hint while cell is collapsed -->\n",
+    "<link rel=\"stylesheet\" href=\"styles.css\">\n",
+    "\n",
     "# A Title\n",
     "\n",
     "## A new Section\n",
@@ -31,14 +34,13 @@
     "\n",
     "1. Bonus numeric list one\n",
     "2. Bonus numeric list two\n",
-    "3. Bonus numeric list three\n",
     "\n",
     "[done]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -54,14 +56,25 @@
     {
      "data": {
       "text/markdown": [
+       "<!-- Comment to show content hint while cell is collapsed -->\r\n",
        "<link rel=\"stylesheet\" href=\"styles.css\">\r\n",
        "\r\n",
-       "# A Title\n",
+       "# A Title\r\n",
        "\r\n",
-       "## A new Section\n",
+       "## A new Section\r\n",
        "\r\n",
-       "A paragraph of text\n",
-       "\r\n"
+       "A paragraph of text\r\n",
+       "\r\n",
+       "- bullet point one\r\n",
+       "- bullet point two\r\n",
+       "* bullet point three\r\n",
+       "\r\n",
+       "Another paragraph of text\r\n",
+       "\r\n",
+       "1. Bonus numeric list one\r\n",
+       "2. Bonus numeric list two\r\n",
+       "\r\n",
+       "[done]\r\n"
       ]
      },
      "metadata": {},
@@ -74,7 +87,18 @@
     "\n",
     "using sequential_reveal_md_tool;\n",
     "\n",
-    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCellUsingStyleString(\"cell1\", \"<link rel=\\\"stylesheet\\\" href=\\\"styles.css\\\">\\n\");\n"
+    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCell(\"cell1\");\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<link rel=\"stylesheet\" href=\"styles.css\">\n",
+    "\n",
+    "# Next Section\n",
+    "\n",
+    "Should be pushed down off screen until presenter moves to it."
    ]
   }
  ],
