--- a/tests/unit-tests/testData/sequentialReveal/after1.ipynb
+++ b/tests/unit-tests/testData/sequentialReveal/after1.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sequential Reveal Tester Notebook\n",
+    "\n",
+    "The following markdoen cell will contain some content which we might want to reveal sequentially, like the animation features of Powerpoint or Google Slides.\n",
+    "\n",
+    "The C# cell below that will render the sections from themarkdown cell one by one.\n",
+    "\n",
+    "In a presentation you would minimise the markdown cell and repeatedly run the the C# cell to sequentially show the content sections."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- Comment to show content hint while cell is collapsed -->\n",
+    "<link rel=\"stylesheet\" href=\"styles.css\">\n",
+    "\n",
+    "# A Title\n",
+    "\n",
     "## A new Section\n",
     "\n",
     "A paragraph of text\n",
@@ -16,14 +34,13 @@
     "\n",
     "1. Bonus numeric list one\n",
     "2. Bonus numeric list two\n",
-    "3. Bonus numeric list three\n",
     "\n",
     "[done]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -39,7 +56,12 @@
     {
      "data": {
       "text/markdown": [
-       "## A new Section\n"
+       "<!-- Comment to show content hint while cell is collapsed -->\r\n",
+       "<link rel=\"stylesheet\" href=\"styles.css\">\r\n",
+       "\r\n",
+       "# A Title\r\n",
+       "\r\n",
+       "## A new Section\r\n"
       ]
      },
      "metadata": {},
@@ -47,11 +69,23 @@
     }
    ],
    "source": [
+    "// Sequentially reveal sections from preceding markdown cell...\n",
     "#r \"../src/sequential-reveal-md-tool/bin/Debug/net9.0/sequential-reveal-md-tool.dll\"\n",
     "\n",
     "using sequential_reveal_md_tool;\n",
     "\n",
-    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCell(\"cell1\");"
+    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCell(\"cell1\");\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<link rel=\"stylesheet\" href=\"styles.css\">\n",
+    "\n",
+    "# Next Section\n",
+    "\n",
+    "Should be pushed down off screen until presenter moves to it."
    ]
   }
  ],
