--- a/tests/unit-tests/testData/sequentialReveal/initial.ipynb
+++ b/tests/unit-tests/testData/sequentialReveal/initial.ipynb
@@ -12,11 +12,16 @@
     "\n",
     "In a presentation you would minimise the markdown cell and repeatedly run the the C# cell to sequentially show the content sections."
    ]
-  },  
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!-- Comment to show content hint while cell is collapsed -->\n",
+    "<link rel=\"stylesheet\" href=\"styles.css\">\n",
+    "\n",
+    "# A Title\n",
+    "\n",
     "## A new Section\n",
     "\n",
     "A paragraph of text\n",
@@ -29,7 +34,6 @@
     "\n",
     "1. Bonus numeric list one\n",
     "2. Bonus numeric list two\n",
-    "3. Bonus numeric list three\n",
     "\n",
     "[done]\n"
    ]
@@ -50,11 +54,23 @@
    },
    "outputs": [],
    "source": [
+    "// Sequentially reveal sections from preceding markdown cell...\n",
     "#r \"../src/sequential-reveal-md-tool/bin/Debug/net9.0/sequential-reveal-md-tool.dll\"\n",
     "\n",
     "using sequential_reveal_md_tool;\n",
     "\n",
-    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCell(\"cell1\");"
+    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCell(\"cell1\");\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<link rel=\"stylesheet\" href=\"styles.css\">\n",
+    "\n",
+    "# Next Section\n",
+    "\n",
+    "Should be pushed down off screen until presenter moves to it."
    ]
   }
  ],
