improved some of the info in the example notebooks

--- a/examples/make-md-fontsizes-larger.ipynb
+++ b/examples/make-md-fontsizes-larger.ipynb
@@ -6,6 +6,16 @@
    "source": [
     "<link rel=\"stylesheet\" href=\"styles.css\">\n",
     "\n",
+    "Edit this markdown cell to see styles.css imported at the top\n",
+    "```html\n",
+    "<link rel=\"stylesheet\" href=\"styles.css\">\n",
+    "```\n",
+    "you will have to do this for each markdown cell as far as I'm aware.\n",
+    "\n",
+    "This doesn't appear to work when viewed in github, but it works in vscode.\n",
+    "\n",
+    "You can also use `<style></style>` to override/set specific styles just for the current markdown cell.\n",
+    "\n",
     "# Title\n",
     "\n",
     "## H2\n",
@@ -25,14 +35,7 @@
     "\n",
     "1. Numeric\n",
     "2. And another\n",
-    "\n",
-    "Edit this markdown cell to see styles.css imported at the top\n",
-    "```html\n",
-    "<link rel=\"stylesheet\" href=\"styles.css\">\n",
-    "```\n",
-    "you will have to do this for each markdown cell as far as I'm aware.\n",
-    "\n",
-    "This doesn't appear to work when viewed in github, but it works in vscode."
+    "\n"
    ]
   },
   {
