--- a/examples/sequential-reveal.ipynb
+++ b/examples/sequential-reveal.ipynb
@@ -6,11 +6,22 @@
    "source": [
     "# Sequential Reveal Tester Notebook\n",
     "\n",
-    "The following markdoen cell will contain some content which we might want to reveal sequentially, like the animation features of Powerpoint or Google Slides.\n",
+    "The following markdown cell will contain some content which we might want to reveal sequentially, like the animation features of Powerpoint or Google Slides.\n",
     "\n",
-    "The C# cell below that will render the sections from themarkdown cell one by one.\n",
+    "The C# cell below that will render the sections from the markdown cell one by one. It relies on VSCode auto saving the notebook file, as reading the notebook file is the only way it detect which markdown lines have been output. Its a bit of a hack but it works and easier than extensing the polyglot notebook VSCode extension! \n",
     "\n",
-    "In a presentation you would minimise the markdown cell and repeatedly run the the C# cell to sequentially show the content sections."
+    "In a presentation you would minimise the markdown cell and repeatedly run the the C# cell to sequentially show the content sections.\n",
+    "\n",
+    "Ensure you leave enough time for the file to have been saved before revealing the next section!\n",
+    "\n",
+    "### To run locally \n",
+    "\n",
+    "* Build the csharp project, otherwise the project reference `#r` will not be able to find the dll\n",
+    "* Ensure Autosave is enabled in VSCode, this can be done via the command pallette `Ctrl + Shift + P` then type autosave\n",
+    "\n",
+    "### Styles\n",
+    "\n",
+    "If you want to override styles in order to make font sizes larger add a Style section or link to a css file, as demonstrated [here](./make-md-fontsizes-larger.ipynb)"
    ]
   },
   {
