updated info in sequential reveal exmaple notebook

--- a/examples/sequential-reveal.ipynb
+++ b/examples/sequential-reveal.ipynb
@@ -21,7 +21,20 @@
     "\n",
     "### Styles\n",
     "\n",
-    "If you want to override styles in order to make font sizes larger add a Style section or link to a css file, as demonstrated [here](./make-md-fontsizes-larger.ipynb)"
+    "If you want to override styles in order to make font sizes larger add a Style section or link to a css file, as demonstrated [here](./make-md-fontsizes-larger.ipynb)\n",
+    "\n",
+    "### How it works\n",
+    "\n",
+    "when the C# cell is executed:\n",
+    "- the method loads and deserialises the notebook file\n",
+    "- it finds the current cell by tag (note \"cell1\" in the example, set on the cell and passed into the method as an arg)\n",
+    "- it then finds the previous cell in order to get the markdown from its Source\n",
+    "- it will split the markdown into sections\n",
+    "- it then looks at the Outputs of the current cell and determines how many sections have been shown so far\n",
+    "- finally it builds the new output as a string on which `.DisplayAs(\"text/markdown\");` is called\n",
+    "- VSCode then displays the new output and after around a second, saves the notebook file\n",
+    "\n",
+    "hint: If using this method more than once in a notebook, Cell Tags need to be unique!"
    ]
   },
   {
