--- a/examples/sequential-reveal.ipynb
+++ b/examples/sequential-reveal.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -83,22 +83,7 @@
        "<!-- Comment to show content hint while cell is collapsed -->\r\n",
        "<link rel=\"stylesheet\" href=\"styles.css\">\r\n",
        "\r\n",
-       "# A Title\r\n",
-       "\r\n",
-       "## A new Section\r\n",
-       "\r\n",
-       "A paragraph of text\r\n",
-       "\r\n",
-       "- bullet point one\r\n",
-       "- bullet point two\r\n",
-       "* bullet point three\r\n",
-       "\r\n",
-       "Another paragraph of text\r\n",
-       "\r\n",
-       "1. Bonus numeric list one\r\n",
-       "2. Bonus numeric list two\r\n",
-       "\r\n",
-       "[done]\r\n"
+       "# A Title\r\n"
       ]
      },
      "metadata": {},
@@ -123,6 +108,70 @@
     "# Next Section\n",
     "\n",
     "Should be pushed down off screen until presenter moves to it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<link rel=\"stylesheet\" href=\"styles.css\">\n",
+    "\n",
+    "# Some markdown containing some additional things that should be treated as separate sections\n",
+    "\n",
+    "```csharp\n",
+    "var now = TimeProvider.System.GetUtcNow();\n",
+    "Console.Writeline($\"Hello world@{now}\")\n",
+    "```\n",
+    "\n",
+    "Some text after the code block\n",
+    "\n",
+    "![an image](./media/pawel-czerwinski-VWVO0g9A3rg-unsplash.jpg)\n",
+    "\n",
+    "Some text after the image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "tags": [
+     "cell2"
+    ],
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<link rel=\"stylesheet\" href=\"styles.css\">\r\n",
+       "\r\n",
+       "# Some markdown containing some additional things that should be treated as separate sections\r\n",
+       "\r\n",
+       "```csharp\r\n",
+       "var now = TimeProvider.System.GetUtcNow();\r\n",
+       "Console.Writeline($\"Hello world@{now}\")\r\n",
+       "```\r\n",
+       "\r\n",
+       "Some text after the code block\r\n",
+       "\r\n",
+       "![an image](./media/pawel-czerwinski-VWVO0g9A3rg-unsplash.jpg)\r\n",
+       "\r\n",
+       "Some text after the image\r\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using sequential_reveal_md_tool;\n",
+    "\n",
+    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCell(\"cell2\");"
    ]
   }
  ],
