--- a/examples/sequential-reveal.ipynb
+++ b/examples/sequential-reveal.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -83,7 +83,23 @@
        "<!-- Comment to show content hint while cell is collapsed -->\r\n",
        "<link rel=\"stylesheet\" href=\"styles.css\">\r\n",
        "\r\n",
-       "# A Title\r\n"
+       "# A Title\r\n",
+       "\r\n",
+       "## A new Section\r\n",
+       "\r\n",
+       "A paragraph of text\r\n",
+       "\r\n",
+       "- bullet point one\r\n",
+       "- bullet point two\r\n",
+       "* bullet point three\r\n",
+       "\r\n",
+       "Another paragraph of text\r\n",
+       "\r\n",
+       "1. Bonus numeric list one\r\n",
+       "2. Bonus numeric list two\r\n",
+       "\r\n",
+       "[done]\r\n",
+       "<div style=\"display:block; height:60rem;\"></div>\r\n"
       ]
      },
      "metadata": {},
@@ -96,7 +112,7 @@
     "\n",
     "using sequential_reveal_md_tool;\n",
     "\n",
-    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCell(\"cell1\");\n"
+    "Notebook.FromFile(\"sequential-reveal.ipynb\").DisplayNextSequentialSectionFromPrecedingMarkdownCell(\"cell1\", 60);\n"
    ]
   },
   {
@@ -132,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
